--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-loader": "^6.0.0",
     "pg": "^8.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "url-loader": "^4.1.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start-client": "react-scripts start",
