--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "url-loader": "^4.1.0",
     "yarn": "^1.22.4"
   },
+  "engines": {
+    "node": "10.16.1"
+  },
   "scripts": {
     "start-client": "react-scripts start",
     "build": "react-scripts build",
